# grc-oir

./: .env.example  .gitignore  CLAUDE.md  PLAN-F0-01-catalogos-operativos.md  docker-compose.yml
.claude/skills/backend-fastapi/: SKILL.md
.claude/skills/documentacion-proyecto/: SKILL.md
.claude/skills/frontend-react/: SKILL.md
.claude/skills/integraciones-externas/: SKILL.md
.claude/skills/migraciones-sqlserver/: SKILL.md
.claude/skills/nuevo-modulo/: SKILL.md
.claude/skills/revision-modulo/: SKILL.md
backend/: .dockerignore  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: audit.py  config.py  db.py  errors.py  field_permissions.py  security.py
backend/app/integrations/almacenamiento/: __init__.py  adapter_local.py  adapter_s3.py  documentos.py  port.py
backend/app/modules/catalogos/: __init__.py  afiliado.py  agencia.py  anunciante.py  base_repository.py  base_service.py  categoria.py  constantes_sistema.py  contrato.py  crud_router.py  cuenta_contable.py  empresa_facturadora.py  estacion.py  importacion_csv.py  plaza.py  router.py  schemas.py  tarifa.py  vendedor.py
backend/app/modules/usuarios/: models.py
backend/app/tests/: _demo.py  conftest.py  test_base_crud.py  test_cors.py  test_f0_01_operativos.py  test_f0_02_tarifas.py  test_f0_03_agencia.py  test_f0_03_anunciante_marca.py  test_f0_03_contrato.py  test_f0_04.py  test_f0_05_constantes.py  test_f0_05_importacion_csv.py  test_health.py  test_rbac.py  test_s3_adjuntos.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 20260701_1907-7300e6f940a3_f0_01_catalogos_operativos.py  20260708_1200-b73f13de1b80_f0_02_tarifas.py  20260710_1000-c4e7a1b93f20_f0_03_agencia_y_auditoria.py  20260710_1400-d5b8c2a71f36_f0_03_anunciante_marca.py  20260711_1000-e7f2a9c14b58_f0_03_contrato.py  20260714_1000-f1a4d0c25e63_f0_04_facturacion_finanzas_usuario.py  20260718_1000-b6d9f2a4c817_f0_05_constantes_sistema.py
docs/: API-CONTRACT.md  GITHUB_WORKFLOW.md  arquitectura.md  glosario.md
docs/modulos/: f0-00-fundamentos-catalogos.md  f0-01-catalogos-operativos.md  f0-02-tarifas.md  f0-05-constantes-sistema.md
docs/modulos/f0-catalogos/: f0-00-fundamentos-catalogos.md  f0-00-indice.md  f0-01-catalogos-operativos.md  f0-02-tarifas.md  f0-03-catalogos-comerciales.md  f0-04-catalogos-facturacion-finanzas.md  f0-05-constantes-sistema.md
docs/modulos/transversal/: dashboard-navegacion.md
docs/referencias/: bd_especificacion_grc_oir.docx  erd_grc_oir.html  propuesta_pointwise_GRC_OIR.docx  ~$opuesta_pointwise_GRC_OIR.docx
docs/referencias/pantallas/: Fase 1 - Ordenes.html  Fase_0_-_Catalogos.html  Fase_2_-_Facturacion.html  Fase_3_-_Cobranza.html  Fase_4_-_Reportes.html  Fase_5_-_Seguridad.html
frontend/: CLAUDE.md  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
(+92 files in other folders)
